[package]
name = "simple_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_sprite_animation = "0.4.0"
bevy_rapier2d = "0.22.0"
bevy_asset_loader = "0.17.0"
bevy_ecs_ldtk = "0.8.0"

#bevy_asset_loader = "0.17.0"
#bevy_titan = "0.3.0"
#bevy-inspector-egui = "0.20.0"
